Add endpoint to get measuremets
